# ddnsrs

./: .gitignore  Cargo.toml  Dockerfile  cosign.pub
.github/workflows/: docker.yml
src/: cache.rs  cf.rs  cli.rs  ip.rs  lib.rs  main.rs  worker.rs
