[package]
name = "ddnsrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = "1"
serde_json = "1"
tokio = { version = "1.39", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
