[package]
name = "ddnsrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.42", features = ["derive", "env"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.145"
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
